[package]
name = "elektron_reports"
version = "0.1.4"
edition = "2021"
description = "Various reports for elektron data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/spielhuus/elektron_reports"

[lib]
name = "elektron_reports"

[dependencies]
thiserror = "1.0.37"
elektron_sexp = "0.1.4"
